css/style.css
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

/* Common */
body{
    background-color: #e4e8eb;
}

/* Utility */
.primary-cta{
    margin 5px;
    padding: 0.4rem 0.6rem;
    background-color: #5CB6F3;
    color: white;
    border:0;
    border-radius: 5px;
}
.secondary-cta{
    margin 5px;
    padding: 0.3rem 0.5rem;
    color: lightgrey;
    background-color: white;
    border: 2px solid lightgrey;
    border-radius: 5px;
}
.divisor{
    color:white;
    border:#e4e8eb;
}
.symbol{
    font-size: 70%;
    /* vertical-align: text-top; */
}

/* Header */
#main-header{
    background-color: white;
}
.logo{
    display:flex;
    font-weight: 900;
    font-size: 2.5rem;
    align-items: center;
    padding: 15px;
}
.logo-txt{
    margin-left: 1rem;
}

/* Main */
#main-container{
    width: 80%;
    margin: 100px auto;
    background-color: white;
    border-radius: 5px 5px 0px 0px;
}
.button-section{
    padding: 1rem 5%;
}
.task-section{
    
    color: rgb(112, 115, 117);
    font-weight: bold;
    vertical-align: text-bottom;
}
.task-list{
    list-style: none;
    line-height: 1.5rem;
}
.task-done{
    padding:3px;
    font-size: 80%;
    display: inline-block;
    width: 20px;
    height: 20px;
    line-height: 13px;
    color: #20c99e;
    border: 1.5px solid;
    border-radius: 50%;
}
.task-fail{
    font-size: 70%;
    display: inline-block;
    width: 20px;
    height: 20px;
    line-height: 13px;
    padding:3px;
    color: #db4a31;
    border: 1.5px solid;
    border-radius: 50%;
}

/* Footer */

